@@ -13,29 +13,51 @@ buildscript{
         google()
         maven{ url "https://oss.sonatype.org/content/repositories/snapshots/" }
         maven{ url 'https://jitpack.io' }
+
+        //fake repository to download my patched robovm jar from
+        ivy{
+            url 'https://github.com/'
+
+            patternLayout {
+                artifact '/[organisation]/[module]/raw/a-single-jar-file/[revision].jar'
+            }
+
+            // This is required in Gradle 6.0+ as metadata file (ivy.xml)
+            // is mandatory. Docs linked below this code section
+            metadataSources { artifact() }
+        }
     }
 
     dependencies{
-        classpath 'com.mobidevelop.robovm:robovm-gradle-plugin:2.3.11'
-        classpath "com.github.anuken:packr:-SNAPSHOT"
+        //use local, patched robovm gradle plugin until my PR for gradle 7.0 support is merged
+        //https://github.com/Anuken/robovm/raw/a-single-jar-file/robovm-gradle-plugin-2.3.14-SNAPSHOT.jar
+        classpath "Anuken:robovm:robovm-gradle-plugin-2.3.14-SNAPSHOT"
+        //needed for plugin above
+        classpath "com.mobidevelop.robovm:robovm-dist-compiler:2.3.13"
+
         classpath "com.github.Anuken.Arc:packer:$arcHash"
         classpath "com.github.Anuken.Arc:arc-core:$arcHash"
     }
 }
 
+plugins{
+    id 'org.jetbrains.kotlin.jvm' version '1.4.32'
+    id "org.jetbrains.kotlin.kapt" version "1.4.32"
+}
+
 allprojects{
-    apply plugin: 'maven'
+    apply plugin: 'maven-publish'
     
     version = 'release'
     group = 'com.github.Anuken'
 
     ext{
-        versionNumber = '6'
-        if(!project.hasProperty("versionModifier")) versionModifier = 'release'
+        versionNumber = '7'
+        if(!project.hasProperty("versionModifier")) versionModifier = 'pre-alpha'
         if(!project.hasProperty("versionType")) versionType = 'official'
         appName = 'Mindustry'
-        steamworksVersion = '891ed912791e01fe9ee6237a6497e5212b85c256'
-        rhinoVersion = '378626d8abc552bba57864358358045d2f2dbe9b'
+        steamworksVersion = '0b86023401880bb5e586bc404bedbaae9b1f1c94'
+        rhinoVersion = '9f792d202471fb3789eab7bb261fec13d67287e2'
 
         loadVersionProps = {
             return new Properties().with{p -> p.load(file('../core/assets/version.properties').newReader()); return p }
@@ -83,13 +105,11 @@ allprojects{
         }
 
         hasSprites = {
-            return new File(rootDir, "core/assets/sprites/sprites.atlas").exists()
+            return new File(rootDir, "core/assets/sprites/sprites.aatls").exists()
         }
 
         getModifierString = {
-            if(versionModifier != "release"){
-                return "[${versionModifier.toUpperCase()}]"
-            }
+            if(versionModifier != "release") return "[${versionModifier.toUpperCase()}]"
             return ""
         }
 
@@ -107,8 +127,7 @@ allprojects{
             def v = System.getenv("ANDROID_HOME")
             if(v != null) return v
             //rootDir is null here, amazing. brilliant.
-            def file = new File("local.properties")
-            if(!file.exists()) file = new File("../local.properties")
+            def file = new File(rootDir, "local.properties")
             def props = new Properties().with{p -> p.load(file.newReader()); return p }
             return props.get("sdk.dir")
         }
@@ -195,10 +214,15 @@ allprojects{
 
     tasks.withType(JavaCompile){
         targetCompatibility = 8
-        sourceCompatibility = 14
+        sourceCompatibility = JavaVersion.VERSION_16
         options.encoding = "UTF-8"
         options.compilerArgs += ["-Xlint:deprecation"]
         dependsOn clearCache
+
+        options.forkOptions.jvmArgs.addAll([
+            '--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
+            '--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED'
+        ])
     }
 }
 
@@ -206,26 +230,20 @@ configure(project(":annotations")){
     tasks.withType(JavaCompile){
         targetCompatibility = 8
         sourceCompatibility = 8
+        options.fork = true
     }
 }
 
 //compile with java 8 compatibility for everything except the annotation project
 configure(subprojects - project(":annotations")){
     tasks.withType(JavaCompile){
-        if(JavaVersion.current() != JavaVersion.VERSION_1_8){
-            options.compilerArgs.addAll(['--release', '8', '--enable-preview'])
-        }
-
-        doFirst{
-            options.compilerArgs = options.compilerArgs.findAll{it != '--enable-preview' }
-        }
+        options.compilerArgs.addAll(['--release', '8'])
     }
 
     tasks.withType(Javadoc){
         options{
             addStringOption('Xdoclint:none', '-quiet')
-            addBooleanOption('-enable-preview', true)
-            addStringOption('-release', '14')
+            addStringOption('-release', '16')
         }
     }
 }
@@ -237,9 +255,9 @@ project(":desktop"){
 
     dependencies{
         implementation project(":core")
+        implementation arcModule("extensions:discord")
         implementation arcModule("natives:natives-desktop")
         implementation arcModule("natives:natives-freetype-desktop")
-        implementation 'com.github.MinnDevelopment:java-discord-rpc:v2.0.1'
 
         if(debugged()) implementation project(":debug")
 
@@ -287,6 +305,15 @@ project(":ios"){
 
 project(":core"){
     apply plugin: "java-library"
+    apply plugin: "kotlin"
+    apply plugin: "kotlin-kapt"
+
+    kapt{
+        javacOptions{
+            option("-source", "16")
+            option("-target", "1.8")
+        }
+    }
 
     compileJava.options.fork = true
 
@@ -319,30 +346,46 @@ project(":core"){
     }
 
     task sourcesJar(type: Jar, dependsOn: classes){
-        classifier = 'sources'
+        archiveClassifier = 'sources'
         from sourceSets.main.allSource
     }
-    
+
+    task assetsJar(type: Jar, dependsOn: ":tools:pack"){
+        archiveClassifier = 'assets'
+        from files("assets"){
+            exclude "config", "cache", "music", "sounds"
+        }
+    }
+
+    task musicJar(type: Jar){
+        archiveClassifier = 'music'
+        from files("assets"){
+            include "music/*", "sounds/*"
+        }
+    }
+
     artifacts{
         archives sourcesJar
+        archives assetsJar
     }
 
     dependencies{
         compileJava.dependsOn(preGen)
 
-        api "org.lz4:lz4-java:1.4.1"
+        api "org.lz4:lz4-java:1.7.1"
         api arcModule("arc-core")
+        api arcModule("extensions:flabel")
         api arcModule("extensions:freetype")
         api arcModule("extensions:g3d")
         api arcModule("extensions:fx")
         api arcModule("extensions:arcnet")
         api "com.github.Anuken:rhino:$rhinoVersion"
         if(localArc() && debugged()) api arcModule("extensions:recorder")
+        if(localArc()) api arcModule(":extensions:packer")
 
-        compileOnly project(":annotations")
-        annotationProcessor project(":annotations")
         annotationProcessor 'com.github.Anuken:jabel:34e4c172e65b3928cd9eabe1993654ea79c409cd'
-
+        compileOnly project(":annotations")
+        kapt project(":annotations")
     }
 
     afterEvaluate{
@@ -366,6 +409,11 @@ project(":core"){
             destinationDir = new File(buildDir, 'javadoc')
         }
     }
+
+    //comp** classes are only used for code generation
+    jar{
+        exclude("mindustry/entities/comp/**")
+    }
 }
 
 project(":server"){
@@ -382,16 +430,18 @@ project(":tests"){
 
     dependencies{
         testImplementation project(":core")
-        testImplementation "org.junit.jupiter:junit-jupiter-params:5.3.1"
-        testImplementation "org.junit.jupiter:junit-jupiter-api:5.3.1"
+        testImplementation "org.junit.jupiter:junit-jupiter-params:5.7.1"
+        testImplementation "org.junit.jupiter:junit-jupiter-api:5.7.1"
         testImplementation arcModule("backends:backend-headless")
-        testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.3.1"
+        testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.7.1"
     }
 
     test{
+        //fork every test so mods don't interact with each other
+        forkEvery = 1
         useJUnitPlatform()
         workingDir = new File("../core/assets")
-        testLogging {
+        testLogging{
             exceptionFormat = 'full'
             showStandardStreams = true
         }
@@ -419,6 +469,21 @@ project(":annotations"){
     }
 }
 
+configure([":core", ":desktop", ":server", ":tools"].collect{project(it)}){
+    java{
+        withJavadocJar()
+        withSourcesJar()
+    }
+
+    publishing{
+        publications{
+            maven(MavenPublication){
+                from components.java
+            }
+        }
+    }
+}
+
 task deployAll{
     task cleanDeployOutput{
         doFirst{
@@ -436,8 +501,10 @@ task deployAll{
     dependsOn "desktop:packrWindows64"
     dependsOn "desktop:packrWindows32"
     dependsOn "desktop:packrMacOS"
-    dependsOn "server:deploy"
-    dependsOn "android:deploy"
+    if(versionModifier != "steam"){
+        dependsOn "server:deploy"
+        dependsOn "android:deploy"
+    }
 }
 
 task resolveDependencies{
